# litteras

./: CMakeLists.txt
src/: AccountNew.cpp  AccountNew.h  AccountNew.ui  Accounts.cpp  Accounts.h  Accounts.ui  AccountsEngine.cpp  AccountsEngine.h  CMakeLists.txt  EwsEngine.cpp  EwsEngine.h  EwsFolderModel.cpp  EwsFolderModel.h  Litteras.cpp  Litteras.h  MainUI.cpp  MainUI.h  MainUI.ui  MessagesModel.cpp  MessagesModel.h  NewMail.cpp  NewMail.h  NewMail.ui  application.qrc  foldermodel.cpp  foldermodel.h  highlighter.cpp  highlighter.h  htmleditor.cpp  htmleditor.h  htmleditor.ui  iconprovider.cpp  litteras.desktop  main.cpp  messagesindex.cpp  messagesindex.h
src/qml/: Accounts.qml  BusyMessage.qml  FolderDelegate.qml  NewAccount.qml  NewAccountServer.qml  main.qml
